curryware-fantasy/curryware-api-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: curryware-api-controller
    tags.datadoghq.com/env: "prod"
    tags.datadoghq.com/service: "curryware-api-controller"
    tags.datadoghq.com/version: "1"
  name: curryware-api-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curryware-api-controller
  template:
    metadata:
      labels:
        app: curryware-api-controller
        tags.datadoghq.com/env: "prod"
        tags.datadoghq.com/service: "curryware-api-controller"
        tags.datadoghq.com/version: "64"
        admission.datadoghq.com/enabled: "true"
#      annotations:
#        admission.datadoghq.com/python-lib.version: v2.8.2
    spec:
      containers:
        - name: curryware-api-controller
          image: scotcurry4/curryware-api-controller:1
