curryware-fantasy/curryware-firebase-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: curryware-firebase-auth
    tags.datadoghq.com/env: "prod"
    tags.datadoghq.com/service: "curryware-firebase-auth"
    tags.datadoghq.com/version: "23"
  name: curryware-firebase-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curryware-firebase-auth
  template:
    metadata:
      labels:
        app: curryware-firebase-auth
        tags.datadoghq.com/env: "prod"
        tags.datadoghq.com/service: "curryware-firebase-auth"
        tags.datadoghq.com/version: "23"
        admission.datadoghq.com/enabled: "true"
#      annotations:
#        admission.datadoghq.com/python-lib.version: v2.8.2
      annotations:
        ad.datadoghq.com/curryware-firebase-auth.logs: >-
          [{
            "source": "curryware-firebase-auth",
            "service": "curryware-firebase-auth",
            "log_processing_rules": [{
              "type": "multi_line",
              "name": "log_start_with_date",
              "pattern": "(\w{3}) (\w{3}) (\d{2}) (\d{2}:\d{2}:\d{2}) (\d{4})"
            }]
          }]
    spec:
      containers:
        - name: curryware-firebase-auth
          image: scotcurry4/curryware-firebase-auth:23
