curryware-fantasy/curryware-front-end-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: curryware-front-end
    tags.datadoghq.com/env: "prod"
    tags.datadoghq.com/service: "curryware-front-end"
    tags.datadoghq.com/version: "55"
  name: curryware-front-end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curryware-front-end
  template:
    metadata:
      labels:
        app: curryware-front-end
        tags.datadoghq.com/env: "prod"
        tags.datadoghq.com/service: "curryware-front-end"
        tags.datadoghq.com/version: "55"
        admission.datadoghq.com/enabled: "true"
#      annotations:
#        admission.datadoghq.com/python-lib.version: v2.8.2
    spec:
      containers:
        - name: curryware-front-end
          image: scotcurry4/curryware-front-end:55
