curryware-fantasy/curryware-java-api-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: curryware-java-api-server
    tags.datadoghq.com/env: "prod"
    tags.datadoghq.com/service: "curryware-java-api-server"
    tags.datadoghq.com/version: "31"
  name: curryware-java-api-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curryware-java-api-server
  template:
    metadata:
      labels:
        app: curryware-java-api-server
        tags.datadoghq.com/env: "prod"
        tags.datadoghq.com/service: "curryware-java-api-server"
        tags.datadoghq.com/version: "31"
        admission.datadoghq.com/enabled: "true"
      annotations:
        admission.datadoghq.com/java-lib.version: v1.57.0
        ad.datadoghq.com/tags: '{"java": "curryware-java-api-server"}'
    spec:
      containers:
        - name: curryware-java-api-server
          image: scotcurry4/curryware-java-api-server:31
          ports: 
            - containerPort: 8080
