curryware-fantasy/curryware-java-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: curryware-java
    tags.datadoghq.com/env: "prod"
    tags.datadoghq.com/service: "curryware-java"
    tags.datadoghq.com/version: "14"
  name: curryware-java-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curryware-java
  template:
    metadata:
      labels:
        app: curryware-java
        tags.datadoghq.com/env: "prod"
        tags.datadoghq.com/service: "curryware-java"
        tags.datadoghq.com/version: "14"
        admission.datadoghq.com/enabled: "true"
    spec:
      containers:
        - name: curryware-java
          image: scotcurry4/curryware-java:14
