curryware-fantasy/curryware-kafka-go-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: curryware-kafka-go-processor
    tags.datadoghq.com/env: "prod"
    tags.datadoghq.com/service: "curryware-kafka-go-processor"
    tags.datadoghq.com/version: "77"
  name: curryware-kafka-go-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curryware-kafka-go-processor
  template:
    metadata:
      labels:
        app: curryware-kafka-go-processor
        tags.datadoghq.com/env: "prod"
        tags.datadoghq.com/service: "curryware-kafka-go-processor"
        tags.datadoghq.com/version: "77"
        admission.datadoghq.com/enabled: "true"
      annotations:
        ad.datadoghq.com/tags: '{"kafka": "consumer"}'
    spec:
      containers:
        - name: curryware-kafka-go-processor
          image: scotcurry4/curryware-kafka-go-processor:77
          # Documentation Link: https://docs.datadoghq.com/containers/kubernetes/apm/?tab=unixdomainsocketuds
          volumeMounts:
            - name: apmsocketpath
              mountPath: /var/run/datadog
      volumes:
        - name: apmsocketpath
          hostPath:
            path: /var/run/datadog
            type: DirectoryOrCreate
