curryware-fantasy/curryware-yahoo-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: curryware-yahoo-api
    tags.datadoghq.com/env: "prod"
    tags.datadoghq.com/service: "curryware-curryware-api"
    tags.datadoghq.com/version: "153"
  name: curryware-yahoo-api
  # See logging https://docs.datadoghq.com/containers/kubernetes/log/?tab=datadogoperator#example-log-autodiscovery-annotations
  annotations:
    ad.datadoghq.com/curryware-yahoo-api.logs: |
      [{
        "type": "file",
        "path": "/app/logs/yahoo-api.log",
        "service": "curryware-yahoo-api",
        "source": "csharp"
      }]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curryware-yahoo-api
  template:
    metadata:
      labels:
        app: curryware-yahoo-api
        tags.datadoghq.com/env: "prod"
        tags.datadoghq.com/service: "curryware-yahoo-api"
        tags.datadoghq.com/version: "153"
        admission.datadoghq.com/enabled: "true"
      annotations:
        admission.datadoghq.com/dotnet-lib.version: v3.9.0
        ad.datadoghq.com/tags: '{"kafka": "producer"}'
    spec:
      containers:
        - name: curryware-front-end
          image: scotcurry4/curryware-yahoo-api:153
          ports: 
            - containerPort: 8087
