curryware-fantasy/curryware-api-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: curryware-api-controller
  name: curryware-api-controller
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8091
  selector:
    app: curryware-api-controller
  type: ClusterIP
