curryware-fantasy/curryware-front-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: curryware-front-end
  name: curryware-front-end
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: curryware-front-end
  type: ClusterIP
