curryware-fantasy/curryware-java-api-server-services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: curryware-java-api-server
  name: curryware-java-api-server-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: curryware-java-api-server
  type: NodePort
