curryware-fantasy/curryware-java-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: curryware-java
  labels:
    app: curryware-java
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: curryware-java
  type: NodePort
