curryware-fantasy/curryware-yahoo-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: curryware-yahoo-api
  name: curryware-yahoo-api
spec:
  ports:
  - port: 8087
    protocol: TCP
    targetPort: 8087
  selector:
    app: curryware-yahoo-api
  type: NodePort
