curryware-fantasy/curryware-java-api-server-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: yahoo-java-route
  namespace: curryware
spec:
  parentRefs:
    - name: traefik
      sectionName: https
      kind: Gateway

  hostnames:
    - ubuntu-microk8s.curryware.org

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /java
      filters:
      - type: ExtensionRef
        extensionRef:
          group: traefik.io
          kind: Middleware
          name: strip-cwapi-java-prefix

      backendRefs:
        - name: curryware-java-api-server
          namespace: curryware
          port: 8080
