curryware-fantasy/curryware-java-api-service-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: curryware-java-httproute
  namespace: curryware
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: ingress
      sectionName: https
      kind: Gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /java
      filters:
      - type: ExtensionRef
        extensionRef:
          group: traefik.io
          kind: Middleware
          name: strip-cwapi-java-prefix

      backendRefs:
        - name: curryware-java-api-server-service
          namespace: curryware
          port: 8080
