curryware-fantasy/curryware-nginx-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingresss.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app: curryware-nginx-ingress-controller
  name: curryware-nginx-ingress-controller
  namespace: curryware
spec:
  ingressClassName: nginx
  rules:
  - host: ubuntu-microk8s.curryware.org
    http:
      paths:
      - path: /frontend(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: curryware-front-end
            port:
              number: 80
      - path: /cw_api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: curryware-api-controller
            port:
              number: 80
  tls:
  - hosts:
    - ubuntu-microk8s.curryware.org
    secretName: ingress-tls
