curryware-fantasy/curryware-yahoo-api-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: curryware-yahoo-api-httproute
  namespace: curryware
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: ingress
      sectionName: https
      kind: Gateway

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /cw_api
      filters:
      - type: ExtensionRef
        extensionRef:
          group: traefik.io
          kind: Middleware
          name: strip-cwapi-java-prefix

      backendRefs:
        - name: curryware-yahoo-api
          namespace: curryware
          port: 8087
